--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1"
 quote = "1"
+syn = "2.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
