--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,20 @@
 [workspace]
 resolver = "2"
-members = [".", "./macro_test"]
+members = [".", "./examples/*"]
 
 [package]
-name = "treesitter_type_collector"
+name = "treesitter_kind_collector"
 version = "0.1.0"
 edition = "2021"
+authors = ["Decodertalkers <aakari@tutanota.com>"]
+repository = "https://github.com/Decodetalkers/treesitter_type_collector"
+keywords = ["treesitter"]
+license = "MIT"
+description = "collect kind names from node-types.json of treesitter"
+readme = "README.md"
+
+[workspace.dependencies]
+treesitter_kind_collector = { version = "0.1.0", path = "./" }
 
 [lib]
 proc-macro = true
